# myriad

./: .gitignore  CMakeLists.txt  Myriad.kdev4  README.md  todo.txt
.kdev4/: Myriad.kdev4
src/: deduplicator.cpp  deduplicator.h  deduplicatorthread.cpp  deduplicatorthread.h  image.cpp  image.h  imageinfo.cpp  imageinfo.h  imageview.cpp  imageview.h  main.cpp  mainwindow.cpp  mainwindow.h  merger.cpp  merger.h  myriadui.rc  processor.cpp  processor.h  processorthread.cpp  processorthread.h  queueitem.cpp  queueitem.h  settings.kcfg  settings.kcfgc
ui/: mainwindow.ui
